H3CIPMSJAVA-20180830/src/objects/Ship_to_id__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <label>Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Ship_to_id</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <label>ZipCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>shipto_id__c</fullName>
        <label>ship to id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Ship to id</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Address__c</columns>
        <columns>shipto_id__c</columns>
        <columns>ZipCode__c</columns>
        <columns>Province__c</columns>
        <columns>City__c</columns>
        <columns>UserName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ByShipToID</fullName>
        <columns>NAME</columns>
        <columns>shipto_id__c</columns>
        <columns>UserName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>shipto_id__c</field>
            <operation>equals</operation>
            <value>53660012</value>
        </filters>
        <label>ByShipToID</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ByUser</fullName>
        <columns>NAME</columns>
        <columns>Address__c</columns>
        <columns>shipto_id__c</columns>
        <columns>ZipCode__c</columns>
        <columns>Province__c</columns>
        <columns>City__c</columns>
        <columns>UserName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UserName__c</field>
            <operation>contains</operation>
            <value>夏思乐</value>
        </filters>
        <label>ByUser</label>
        <language>zh_CN</language>
    </listViews>
    <nameField>
        <label>Ship to id Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>